@startuml

class Inscripcion {
  -alumno: Alumno
  -materias: List<Materia>
  +aprobada(): Boolean
}

class Materia{
  -nombre: String
  -nota: int
  -correlativas: List<Materia>

  +getCorrelativas(): List<Materia>
  +getNota(): int
}

class Alumno{
  -nombre: String
  -legajo: String
  -materiasAprobadas: List<Materia>


  +aproboCorrelativas(Materia materia) : Boolean
}


Alumno -->"*"  Materia
Materia -->"*" Materia
Inscripcion  o-- "*" Materia
Inscripcion  o--Alumno






@enduml